another z-index fix

--- a/source/stylesheets/modules/_nav.scss
+++ b/source/stylesheets/modules/_nav.scss
@@ -31,7 +31,6 @@ nav {
   nav {
     height: 90px;
     position: relative;
-    z-index: 9001;
     .site-id img {
       width: 115px;
     }
